tests/neg-inline-trait/disallow-init-in-inline-trait.scala
inline trait Foo:
    println("Hello world!") // error
